fixed spacing in projectmodal carousel

--- a/src/UI/ProjectModal/ProjectModal.module.css
+++ b/src/UI/ProjectModal/ProjectModal.module.css
@@ -138,13 +138,6 @@
   overflow-x: scroll;
 }
 
-.Slides:after {
-  content: "";
-  display: block;
-  width: 0.01px;
-  height: 100%;
-}
-
 .Slides img {
   width: 100%;
   border-radius: 15px;
